# msvc-runtime

./: MODULE.bazel  README.md
.github/workflows/: ci.yaml
e2e/smoke/: WORKSPACE.bazel
windows/: BUILD.bazel  repositories.bzl
windows/private/extensions/: BUILD.bazel  common.bzl  msvc_runtime.BUILD.bazel  msvc_runtime.bzl  windows_sdk.bzl
