load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "msvc_runtime",
    srcs = ["msvc_runtime.bzl"],
    visibility = ["//windows:__subpackages__"],
    deps = ["@bazel_tools//tools/build_defs/repo:utils.bzl"],
)

bzl_library(
    name = "windows_sdk",
    srcs = ["windows_sdk.bzl"],
    visibility = ["//windows:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
